--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                             <i class="ri-map-pin-2-line p-2"></i>
                             <p id="location-text" class="p-2">Mumbai, India</p>
                             <div class="p-2">
-                                <img src="" alt="Country Flag" class="rounded" id="country-flag" height="20px">
+                                <a href="#" id="country-info-link" target="_blank">
+                                    <img src="" alt="Country Flag" class="rounded" id="country-flag" height="20px">
+                                </a>
                             </div>
                         </div>
 
@@ -208,8 +210,7 @@
             <div class="container">
                 <p>
                     Created by
-                    <a href="https://github.com/AdityaBavadekar"
-                        >Aditya Bavadekar</a
+                    <a href="https://github.com/AdityaBavadekar" target="_blank"                        >Aditya Bavadekar</a
                     >
                 </p>
             </div>
