Added log moniter for debugging mobile device minor ui bugs

--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
                             <code id="api-response">[Empty]</code>
                         </div>
                     </div>
+                    
+                    <div class="container">
+                        <div id="log-moniter-container">
+                            <code id="log-moniter"></code>
+                        </div>
+                    </div>
                 </div>
 
                 <br />
