Update hidden usages

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="container" id="loader">
                     <div class="d-flex justify-content-start ms-3">
                         <div class="spinner-border m-4" role="status">
-                            <span class="visually-d-none">Loading...</span>
+                            <span class="visually-hidden">Loading...</span>
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                 <br />
             </div>
 
-            <div class="modal fade" id="modal" tabindex="-1" aria-d-none="true">
+            <div class="modal fade" id="modal" tabindex="-1" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
