--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
         <main>
             <div>
+                <div class="nav-padding"></div>
                 <div class="container">
                     <div
                         class="alert alert-warning d-none"
