Update overflow parameter

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div
                         class="round p-2 container justify-content-center"
                         id="search-results-container"
-                        style="position: absolute; overflow: auto"
+                        style="position: absolute; overflow-x: auto; overflow-y: auto;"
                     ></div>
                 </div>
                 <div class="col-1">
